1997-09-16  Thomas E. Dickey  <dickey@clark.net>

	* makefile.in: dummy sources-rule for stupid 'make' programs.

1997-09-13  Thomas E. Dickey  <dickey@clark.net>

	* aclocal.m4: add search for <td/ptypes.h>

	* certify/makefile.in: fix warning on distclean rule

	* user/makefile.in: ?

	* user/makefile.in: update install-rule

	* src/ded.h: use 'const' in qsort-comparison

	* src/dedsort.c: use 'const' in qsort comparison

	* src/dedview.c: %ld vs %d

	* src/dedfree.c: int vs unsigned

	* src/restat.c, src/dedtags.c, src/dedcolor.c: int vs size_t

	* src/makefile.2nd: RCS_BASE

	* src/makefile.in: first cut of restructuring

	* src/modules: moved dependency info here

1997-09-12  Thomas E. Dickey  <dickey@clark.net>

	* aclocal.m4: initial cut of CF_SRC_MAKEFILES

	* configure.in: add hooks to generate src/makefile

	* makefile.in: first cut of restructuring

1997-09-11  Thomas E. Dickey  <dickey@clark.net>

	* makefile.in: add distclean rule

	* aclocal.m4, user/makefile.in, src/makefile.in, certify/makefile.in, makefile.in, configure.in, test/makefile.in, src/modules:
	RCS_BASE

1997-09-07  Thomas E. Dickey  <dickey@clark.net>

	* mkdirs.sh, install-sh: RCS_BASE

1997-06-15  Thomas E. Dickey  <dickey@clark.net>

	* src/dedview.c: check return-value of setsccreg()

1997-02-11  Thomas E. Dickey  <dickey@clark.net>

	* src/version.h:
	fixes to dedscan's handling of common-prefix trimming (97/1, 97/2).
	restructured initialization of dedcolor to use ncurses 'use_default_colors()'.
	move ANSI_VARARGS tests into td_lib configure.
	make dedblip work before curses is initialized.

1997-02-02  Thomas E. Dickey  <dickey@clark.net>

	* src/dedscan.c:
	fixes a special case where common portion of path was common to all files,
	and was a relative path.  This broke an assumption in path_RESOLVE.

1997-01-18  Thomas E. Dickey  <dickey@clark.net>

	* src/ded.h: moved dedcolor initialize to that module

	* src/ded.c: add init_dedcolor()
